tests/paczka1/small_fuzzy/22713466.err
Error in line 10: A23 A23 54,9
Error in line 15: rznFza A23 83,71
